dwie nowe metody przypisywania pacjentów do oddziałów: do tego, który ma najwięcej wolnych miejsc i losowo